Translation included but need more work

--- a/example.config.yaml
+++ b/example.config.yaml
@@ -27,3 +27,8 @@ include_processing_metadata: true
 
 # Add this to your config.yaml for debugging
 debug_json_responses: true  # Set to false in production
+
+# Translation configuration
+enable_translation: false  # Set to false to disable translation steps
+source_language: "french"
+target_language: "english"
